--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,27 +6,41 @@ body {
 	margin: 0;
 }
 
-.container {
-	display: flex;
-	height: 64px;
-    font-size: 2rem;
-    font-family: "Helvetica", sans-serif;
-    background-color: #b2c2b2;
-    justify-content: space-between;
-}
-
 .nav {
-
+	display: flex;
+	line-height: 3.8;
+	height: 64px;
+    font-size: 1.2rem;
+    font-family: "Josefin Sans", serif;
+    background-color: #b4c1a2;
 }
  
-
- .nav img {
+.nav img {
+    padding-top: 12px;
 	margin-left: 24px;
-    
+	height: 2.8rem;   
 }
 
-.nav span {
-	
+.nav a {
+	line-height: 4.8;
+	position: relative;
+	font-weight: bold;
+	font-family: "Josefin Sans", "Helvetica", serif;
+	text-decoration: none;
+	color: black;
+    margin: 0px 16px 0px 16px;
+    font-size: 0.9rem;
+	left: 52%;
+}
+
+.nav a:hover {
+	color: #ffffff;
+	transition: color 330ms linear;
+}
+
+.nav div {
+	line-height: 3.5;
+	font-family: "Gloria Hallelujah";
 }
 
 .nav p {
