--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,27 +19,30 @@ header {
     background-position: center;
 }
  
-.logo {
+ .logo {
     padding-top: 12px;
 	margin-left: 24px;
 	height: 2.8rem;   
 }
 
-
+.button,
+nav a {
+	background-color: gray;
+}
 nav a {
 	position: relative;
-	line-height: 4.8;
-	font-weight: bold;
-	font-family: "Josefin Sans", "Helvetica", serif;
+	line-height: 3.7;
+	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
-	color: black;
+    color: black;
+	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
-    font-size: 0.9rem;
-    left: 695px;
+    font-size: 1.2rem;
+    left: 662px;
 }
 
 header a:hover {
-	color: #ffffff;
+	color: #ffff00;
 	transition: color 330ms linear;
 }
 
@@ -48,9 +51,8 @@ header div {
 	font-family: "Gloria Hallelujah";
 }
 
-
-
 /*top-banner section*/ 
+
 
 .top-banner img {
 	height: 60%;
@@ -65,7 +67,17 @@ header div {
 }
 
 .large-txt h1 {
-  font-family: "Josefin Sans";
-  font-weight: 400px;
+  font-family: " ";
+  font-weight: bold;
   font-size: 40px;
 }
+
+.button {
+	display: flex;
+	text-align: center;
+	padding: 8px 0px 8px 160px;
+	font-family: "Caveat Brush", serif;
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
