--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,6 +5,8 @@ html {
 body {
 	margin: 0;
 	overflow-x: hidden;
+	background-color: #bebebe;
+;
 }
 
 header {
@@ -13,6 +15,7 @@ header {
 	line-height: 3.8;
 	height: 64px;
     font-size: 1.2rem;
+    border-bottom: 3px solid white;
     font-family: "Josefin Sans", serif;
     background-color: #b4c1a2;
     background-size: cover;
@@ -25,25 +28,21 @@ header {
 	height: 2.8rem;   
 }
 
-.button,
-nav a {
-	background-color: gray;
+nav a:hover {
+	color: #ffff00;
 }
+
 nav a {
 	position: relative;
 	line-height: 3.7;
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
     color: black;
+    font-weight: bold;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     font-size: 1.2rem;
     left: 662px;
-}
-
-header a:hover {
-	color: #ffff00;
-	transition: color 330ms linear;
 }
 
 header div {
@@ -77,7 +76,20 @@ header div {
 	text-align: center;
 	padding: 8px 0px 8px 160px;
 	font-family: "Caveat Brush", serif;
+	color: black;
+	border-radius: 6px;
+    border: 3px solid black;
+    background-color: #606060;
 	font-size: 1.5rem;
+}
+
+.button:hover {
+	background-color: darkkhaki;
+}
+
+.button a {
+	text-decoration: none;
 	font-weight: bold;
+	color: black;
 }
 
