--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,20 +12,26 @@ body {
 header {
 	width: 100%;
 	display: flex;
-	line-height: 3.8;
+	line-height: 2.8;
 	height: 64px;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     border-bottom: 3px solid white;
     font-family: "Josefin Sans", serif;
     background-color: #b4c1a2;
     background-size: cover;
     background-position: center;
 }
- 
- .logo {
-    padding-top: 12px;
+
+header div {
+	line-height: 2.6;
+	text-shadow: 3px 3px green;
+	font-family: "Gloria Hallelujah";
+}
+
+.logo {
+    padding-top: 9px;
 	margin-left: 24px;
-	height: 2.8rem;   
+	height: 3.4rem;  
 }
 
 nav a:hover {
@@ -37,17 +43,13 @@ nav a {
 	line-height: 3.7;
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
+	text-shadow: 1px 1px #ffffff;
     color: black;
     font-weight: bold;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     font-size: 1.2rem;
-    left: 662px;
-}
-
-header div {
-	line-height: 3.5;
-	font-family: "Gloria Hallelujah";
+    left: 560px;
 }
 
 /*top-banner section*/ 
@@ -85,10 +87,13 @@ header div {
 
 .button:hover {
 	background-color: darkkhaki;
+    box-shadow: 5px 5px 5px black;
+    transition: box-shadow 350ms ease-out, background-color 350ms ease-out;
 }
 
 .button a {
 	text-decoration: none;
+	text-shadow: 2px 2px #ffffff;
 	font-weight: bold;
 	color: black;
 }
