--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,7 @@ header {
 	line-height: 2.8;
 	height: 64px;
     font-size: 1.8rem;
-    border-bottom: 3px solid white;
+    border-bottom: 4px solid white;
     font-family: "Josefin Sans", serif;
     background-color: #b4c1a2;
     background-size: cover;
@@ -24,7 +24,7 @@ header {
 
 header div {
 	line-height: 2.6;
-	text-shadow: 3px 3px green;
+	text-shadow: 3px 3px black;
 	font-family: "Gloria Hallelujah";
 }
 
@@ -35,7 +35,9 @@ header div {
 }
 
 nav a:hover {
-	color: #ffff00;
+	background-color: #ffff33;
+	box-shadow: 3px 3px 3px black;
+	transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
 }
 
 nav a {
@@ -43,11 +45,17 @@ nav a {
 	line-height: 3.7;
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
-    color: black;
+	text-shadow: 2px 2px #ffffff;
+    background-color:#606060;
+    border: solid 3px black;
+    border-radius: 20px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
-    font-size: 1.2rem;
-    left: 510px;
+    padding: 1px 5px;
+    font-size: 0.9rem;
+    color: black;
+    left: 516px;
+    bottom: 7px;
 }
 
 /*top-banner section*/ 
@@ -57,34 +65,49 @@ nav a {
 	height: 60%;
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
+	border: solid 4px white;
+	border-radius: 4px;
 }
 
 .top-banner section  {
   position: absolute;
-  left: 855px;
-  top: 45%;
+  left: 866px;
+  top: 30%;
 }
 
 .large-txt h1 {
-  font-family: " ";
-  font-weight: bold;
-  font-size: 40px;
+  font-family: "Gloria Hallelujah";
+  letter-spacing: 2px;
+  line-height: 1.3;
+  margin-bottom: 2px;
+  text-shadow: 4px 3px black;
+  color: #ffff00;
+  font-size: 50px;
+}
+
+.large-txt h3 {
+	font-family: "Caveat Brush";
+	margin-top: 20px;
+	letter-spacing: 2px;
+	font-weight: normal;
+	font-size: 2rem;
 }
 
 .button {
 	display: flex;
 	text-align: center;
-	padding: 8px 0px 8px 160px;
+	padding: 8px 0px 8px 153px;
 	font-family: "Caveat Brush", serif;
 	color: black;
-	border-radius: 6px;
-    border: 3px solid black;
+	border: solid 4px black;
+    letter-spacing: 2px;
+	border-radius: 8px;
     background-color: #606060;
 	font-size: 1.5rem;
 }
 
 .button:hover {
-	background-color: darkkhaki;
+	background-color: #ffff33;
     box-shadow: 5px 5px 5px black;
     transition: box-shadow 350ms ease-out, background-color 350ms ease-out;
 }
