--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,7 @@ header {
 	line-height: 2.8;
 	height: 64px;
     font-size: 1.8rem;
-    border-bottom: 4px solid white;
+    border-bottom: 4px solid lightgray;
     font-family: "Josefin Sans", serif;
     background-color: #b4c1a2;
     background-size: cover;
@@ -24,7 +24,7 @@ header {
 
 header div {
 	line-height: 2.6;
-	text-shadow: 3px 3px black;
+	text-shadow: 5px 5px black;
 	font-family: "Gloria Hallelujah";
 }
 
@@ -60,18 +60,16 @@ nav a {
 
 /*top-banner section*/ 
 
-
 .top-banner img {
-	height: 60%;
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
-	border: solid 4px white;
+	border: solid 4px black;
 	border-radius: 4px;
 }
 
 .top-banner section  {
   position: absolute;
-  left: 866px;
+  left: 840px;
   top: 30%;
 }
 
@@ -80,8 +78,8 @@ nav a {
   letter-spacing: 2px;
   line-height: 1.3;
   margin-bottom: 2px;
-  text-shadow: 4px 3px black;
-  color: #ffff00;
+  text-shadow: 5px 5px black;
+  color: #ffff33;
   font-size: 50px;
 }
 
@@ -119,3 +117,31 @@ nav a {
 	color: black;
 }
 
+/* main-content section */
+
+
+.main-content img {
+    width: 60%;
+    margin: 32px 24px 32px 24px; 
+    border: solid 4px black;
+    border-radius: 4px;
+}
+
+section {
+    margin-left: 25px;
+}
+
+.medium-txt h2 {
+	margin: 0px 0px 24px 0px;
+	font-family: "Caveat Brush"; 
+	letter-spacing: 2px;
+	font-size: 3rem;
+	color: #ffff33;
+	text-shadow: 4px 4px black;
+	font-weight: normal;
+}
+
+.medium-txt p {
+   
+    
+}
