--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,8 +5,6 @@ html {
 body {
 	margin: 0;
 	overflow-x: hidden;
-	background-color: #bebebe;
-;
 }
 
 header {
@@ -36,8 +34,8 @@ header div {
 
 nav a:hover {
 	background-color: #ffff33;
-	box-shadow: 3px 3px 3px black;
-	transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
+    box-shadow: 3px 3px 3px black;
+    transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
 }
 
 nav a {
@@ -47,7 +45,7 @@ nav a {
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color:#606060;
-    border: solid 3px black;
+    border: solid 2px black;
     border-radius: 20px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
@@ -60,20 +58,25 @@ nav a {
 
 /*top-banner section*/ 
 
+
+.top-banner {
+	background-color: #bebebe;
+}
+
 .top-banner img {
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px black;
-	border-radius: 4px;
+    border-radius: 30px;
 }
 
 .top-banner section  {
   position: absolute;
-  left: 840px;
+  left: 852px;
   top: 30%;
 }
 
-.large-txt h1 {
+section h1 {
   font-family: "Gloria Hallelujah";
   letter-spacing: 2px;
   line-height: 1.3;
@@ -83,7 +86,7 @@ nav a {
   font-size: 50px;
 }
 
-.large-txt h3 {
+section h3 {
 	font-family: "Caveat Brush";
 	margin-top: 20px;
 	letter-spacing: 2px;
@@ -120,18 +123,22 @@ nav a {
 /* main-content section */
 
 
+.main-content {
+	background-color: #b4c1a2;
+}
+
 .main-content img {
     width: 60%;
     margin: 32px 24px 32px 24px; 
     border: solid 4px black;
-    border-radius: 4px;
+    border-radius: 30px;
 }
 
 section {
     margin-left: 25px;
 }
 
-.medium-txt h2 {
+.main h2 {
 	margin: 0px 0px 24px 0px;
 	font-family: "Caveat Brush"; 
 	letter-spacing: 2px;
@@ -141,7 +148,12 @@ section {
 	font-weight: normal;
 }
 
-.medium-txt p {
-   
-    
+.main-images {
+   display: column; 
+   align-items: right;
+}
+
+.main-images img {
+	display: block;
+	width: 15%;
 }
