--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,7 @@ body {
 }
 
 header {
+	margin-left: 0px;
 	width: 100%;
 	display: flex;
 	line-height: 2.8;
@@ -15,21 +16,22 @@ header {
     font-size: 1.8rem;
     border-bottom: 4px solid lightgray;
     font-family: "Josefin Sans", serif;
-    background-color: #b4c1a2;
     background-size: cover;
     background-position: center;
 }
 
 header div {
 	line-height: 2.6;
-	text-shadow: 5px 5px black;
+	text-shadow: 5px 5px #ffff33;
 	font-family: "Gloria Hallelujah";
 }
 
 .logo {
     padding-top: 9px;
-	margin-left: 24px;
-	height: 3.4rem;  
+	height: 3.4rem;
+	margin-left: 17px;
+
+
 }
 
 nav a:hover {
@@ -44,7 +46,7 @@ nav a {
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
-    background-color:#606060;
+    background-color: lightgray;
     border: solid 2px black;
     border-radius: 20px;
 	letter-spacing: 1px;
@@ -52,7 +54,7 @@ nav a {
     padding: 1px 5px;
     font-size: 0.9rem;
     color: black;
-    left: 516px;
+    left: 541px;
     bottom: 7px;
 }
 
@@ -60,19 +62,20 @@ nav a {
 
 
 .top-banner {
-	background-color: #bebebe;
+    background-color: #FAFAD2;
+
 }
 
 .top-banner img {
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
-	border: solid 4px black;
+	border: solid 4px lightgray;
     border-radius: 30px;
 }
 
 .top-banner section  {
   position: absolute;
-  left: 852px;
+  left: 859px;
   top: 30%;
 }
 
@@ -81,8 +84,8 @@ section h1 {
   letter-spacing: 2px;
   line-height: 1.3;
   margin-bottom: 2px;
-  text-shadow: 5px 5px black;
-  color: #ffff33;
+  text-shadow: 5px 5px #ffff33;
+  color: black;
   font-size: 50px;
 }
 
@@ -100,10 +103,10 @@ section h3 {
 	padding: 8px 0px 8px 153px;
 	font-family: "Caveat Brush", serif;
 	color: black;
-	border: solid 4px black;
+	border: solid 3px black;
     letter-spacing: 2px;
 	border-radius: 8px;
-    background-color: #606060;
+    background-color: lightgray;
 	font-size: 1.5rem;
 }
 
@@ -124,7 +127,6 @@ section h3 {
 
 
 .main-content {
-	background-color: #b4c1a2;
 }
 
 .main-content img {
@@ -143,17 +145,20 @@ section {
 	font-family: "Caveat Brush"; 
 	letter-spacing: 2px;
 	font-size: 3rem;
-	color: #ffff33;
-	text-shadow: 4px 4px black;
+	color: black;
+	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
 }
 
 .main-images {
    display: column; 
-   align-items: right;
 }
 
 .main-images img {
 	display: block;
+	position: relative;
+	background-color: red;
 	width: 15%;
+	left: 859px;
+	top: -692px;
 }
