--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,9 +8,8 @@ body {
 }
 
 header {
-	margin-left: 0px;
-	width: 100%;
 	display: flex;
+    width: 100%;
 	line-height: 2.8;
 	height: 64px;
     font-size: 1.8rem;
@@ -30,19 +29,18 @@ header div {
     padding-top: 9px;
 	height: 3.4rem;
 	margin-left: 17px;
-
-
 }
 
-nav a:hover {
-	background-color: #ffff33;
-    box-shadow: 3px 3px 3px black;
-    transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
+nav {
+	display: flex;
 }
 
 nav a {
-	position: relative;
-	line-height: 3.7;
+	top: 20px;
+	left: 575px;
+    height: 20px;
+    line-height: 1.4;
+    position: relative;
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
@@ -54,16 +52,22 @@ nav a {
     padding: 1px 5px;
     font-size: 0.9rem;
     color: black;
-    left: 541px;
     bottom: 7px;
 }
+
+nav a:hover {
+	background-color: #ffff33;
+    box-shadow: 3px 3px 3px black;
+    transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
+}
+
 
 /*top-banner section*/ 
 
 
 .top-banner {
+	display: flex;
     background-color: #FAFAD2;
-
 }
 
 .top-banner img {
@@ -74,9 +78,8 @@ nav a {
 }
 
 .top-banner section  {
-  position: absolute;
-  left: 859px;
-  top: 30%;
+  margin-top: 200px;
+  margin-left: 0px;
 }
 
 section h1 {
