--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -20,13 +20,13 @@ header {
 }
 
 header div {
-	line-height: 2.6;
+	line-height: 2.4;
     margin-left: 17px;
 }
 
 .logo {
 	height: 3.5rem;
-	margin-bottom: -15px;
+	margin-bottom: -17px;
 }
 
 header span {
@@ -48,7 +48,7 @@ nav a {
 	text-shadow: 2px 2px #ffffff;
     background-color: lightgray;
     border: solid 2px black;
-    border-radius: 20px;
+    border-radius: 8px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
@@ -59,7 +59,7 @@ nav a {
 
 nav a:hover {
 	background-color: #ffff33;
-    box-shadow: 3px 3px 3px black;
+    box-shadow: 6px 6px 6px black;
     transition: background-color 350ms ease-out, box-shadow 350ms ease-out;
 }
 
@@ -73,6 +73,7 @@ nav a:hover {
 }
 
 .top-banner img {
+	height: 50%;
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px lightgray;
@@ -117,7 +118,7 @@ section h3 {
 
 .button:hover {
 	background-color: #ffff33;
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 10px 10px 10px black;
     transition: box-shadow 350ms ease-out, background-color 350ms ease-out;
 }
 
@@ -132,6 +133,7 @@ section h3 {
 
 
 .main-content {
+	
 }
 
 .main-content img {
