--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,12 +1,13 @@
 html {
 	font-size: 16px;
 }
-
 body {
 	margin: 0;
 	overflow-x: hidden;
 }
 
+
+/* header */
 header {
 	display: flex;
     width: 100%;
@@ -18,12 +19,10 @@ header {
     background-position: center;
     justify-content: space-between;
 }
-
 header div {
 	line-height: 2.4;
     margin-left: 17px;
 }
-
 .logo {
 	height: 3.5rem;
 	margin-bottom: -17px;
@@ -33,11 +32,9 @@ header span {
 	text-shadow: 5px 5px #ffff33;
 	font-family: "Gloria Hallelujah";
 }
-/*nav menu */
 nav {
 	display: flex;
 }
-
 nav a {
 	top: 20px;
     height: 20px;
@@ -56,7 +53,6 @@ nav a {
     color: black;
     bottom: 7px;
 }
-
 nav a:hover {
 	background-color: #ffff33;
     box-shadow: 6px 6px 6px black;
@@ -64,14 +60,12 @@ nav a:hover {
 }
 
 
+
 /*top-banner section*/ 
-
-
 .top-banner {
 	display: flex;
     background-color: #FAFAD2;
 }
-
 .top-banner img {
 	height: 50%;
 	width: 60%;
@@ -79,12 +73,10 @@ nav a:hover {
 	border: solid 4px lightgray;
     border-radius: 30px;
 }
-
 .top-banner section  {
   margin-top: 200px;
   margin-left: 0px;
 }
-
 section h1 {
   font-family: "Gloria Hallelujah";
   letter-spacing: 2px;
@@ -94,7 +86,6 @@ section h1 {
   color: black;
   font-size: 50px;
 }
-
 section h3 {
 	font-family: "Caveat Brush";
 	margin-top: 20px;
@@ -102,7 +93,6 @@ section h3 {
 	font-weight: normal;
 	font-size: 2rem;
 }
-
 .button {
 	display: flex;
 	text-align: center;
@@ -115,13 +105,11 @@ section h3 {
     background-color: lightgray;
 	font-size: 1.5rem;
 }
-
 .button:hover {
 	background-color: #ffff33;
     box-shadow: 10px 10px 10px black;
     transition: box-shadow 350ms ease-out, background-color 350ms ease-out;
 }
-
 .button a {
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
@@ -129,24 +117,21 @@ section h3 {
 	color: black;
 }
 
+
+
 /* main-content section */
-
-
 .main-content {
 	
 }
-
 .main-content img {
     width: 60%;
     margin: 32px 24px 32px 24px; 
     border: solid 4px black;
     border-radius: 30px;
 }
-
 section {
     margin-left: 25px;
 }
-
 .main h2 {
 	margin: 0px 0px 24px 0px;
 	font-family: "Caveat Brush"; 
@@ -156,11 +141,9 @@ section {
 	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
 }
-
 .main-images {
    display: column; 
 }
-
 .main-images img {
 	display: block;
 	position: relative;
