--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
     width: 100%;
 	height: 64px;
     font-size: 1.8rem;
-    border-bottom: 4px solid lightgray;
+    border-bottom: 4px solid #d3d3d3;
     font-family: "Josefin Sans", serif;
     background-size: cover;
     background-position: center;
@@ -43,7 +43,7 @@ nav a {
 	font-family: "Caveat Brush", "Helvetica", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
-    background-color: lightgray;
+    background-color: #d3d3d3;
     border: solid 2px black;
     border-radius: 8px;
 	letter-spacing: 1px;
@@ -70,21 +70,21 @@ nav a:hover {
 	height: 50%;
 	width: 60%;
 	margin: 32px 24px 32px 24px; 
-	border: solid 4px lightgray;
+	border: solid 4px #d3d3d3;
     border-radius: 30px;
 }
 .top-banner section  {
-  margin-top: 200px;
-  margin-left: 0px;
+    margin-top: 135px;
+    margin-left: 0px;
 }
 section h1 {
-  font-family: "Gloria Hallelujah";
-  letter-spacing: 2px;
-  line-height: 1.3;
-  margin-bottom: 2px;
-  text-shadow: 5px 5px #ffff33;
-  color: black;
-  font-size: 50px;
+    font-family: "Gloria Hallelujah";
+    letter-spacing: 2px;
+    line-height: 1.3;
+    margin-bottom: 2px;
+    text-shadow: 5px 5px #ffff33;
+    color: black;
+    font-size: 50px;
 }
 section h3 {
 	font-family: "Caveat Brush";
@@ -102,7 +102,7 @@ section h3 {
 	border: solid 3px black;
     letter-spacing: 2px;
 	border-radius: 8px;
-    background-color: lightgray;
+    background-color: #d3d3d3;
 	font-size: 1.5rem;
 }
 .button:hover {
@@ -121,18 +121,21 @@ section h3 {
 
 /* main-content section */
 .main-content {
-	
+	display: flex;	
 }
-.main-content img {
-    width: 60%;
-    margin: 32px 24px 32px 24px; 
-    border: solid 4px black;
+
+.main-content section  {
+	margin-left: 24px;
+}
+
+.main .top-section img {
+	width: 75%;
+    margin: 32px 0px 32px 0px; 
+    border: solid 4px #d3d3d3;
     border-radius: 30px;
 }
-section {
-    margin-left: 25px;
-}
-.main h2 {
+
+.top-section h2 {
 	margin: 0px 0px 24px 0px;
 	font-family: "Caveat Brush"; 
 	letter-spacing: 2px;
@@ -141,14 +144,14 @@ section {
 	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
 }
-.main-images {
-   display: column; 
-}
-.main-images img {
+.info-images {
+   display: column;
+}  
+
+.info-images img {
 	display: block;
-	position: relative;
-	background-color: red;
-	width: 15%;
-	left: 859px;
-	top: -692px;
+	width: 74%;
+	margin-top: 32px;
+	border: solid 4px #d3d3d3;
+	border-radius: 30px;
 }
