--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -129,8 +129,12 @@ section h3 {
 	margin-left: 24px;
 }
 
+.top-section {
+    width: 60%;
+}
+
 .top-section img {
-	width: 76.5%;
+	width: 60%;
     margin: 32px 0px 32px 0px; 
     border: solid 4px #d3d3d3;
     border-radius: 30px;
@@ -147,14 +151,11 @@ section h3 {
 }
 .info-images {
    display: flex;
-   flex-direction: column;
-   position: relative;
-   right: 16%;
-   
+   flex-direction: column; 
 }  
 
 .info-images img {
-	width: 76%;
+	width: 35%;
 	margin-top: 32px;
 	border: solid 4px #d3d3d3;
 	border-radius: 30px;
