--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,7 +38,7 @@ nav {
 }
 nav a {
 	top: 20px;
-    height: 20px;
+    height: 18px;
     line-height: 1;
     position: relative;
 	font-family: "Caveat Brush", "Helvetica", serif;
@@ -50,7 +50,7 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: black;
     bottom: 7px;
 }
@@ -69,16 +69,15 @@ nav a:hover {
 }
 .top-banner img {
 	height: 50%;
-	width: 60%;
+	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px #d3d3d3;
-    border-radius: 30px;
 }
 .top-banner section  {
-    margin-top: 135px;
+    margin-top: 100px;
     margin-left: 0px;
 }
-section h1 {
+.top-banner h1 {
     font-family: "Gloria Hallelujah";
     letter-spacing: 2px;
     line-height: 1.3;
@@ -87,12 +86,14 @@ section h1 {
     color: black;
     font-size: 50px;
 }
-section h3 {
-	font-family: "Caveat Brush";
-	margin-top: 20px;
-	letter-spacing: 2px;
+.top-banner h3 {
+	font-family: "Just Another Hand";
+	margin: 20px 0px 30px 30px;
+	letter-spacing: 4px;
+	word-spacing: 4px;
 	font-weight: normal;
-	font-size: 2rem;
+	font-size: 2.7rem;
+	width: 100%;
 }
 .button {
 	display: flex;
@@ -132,31 +133,84 @@ section h3 {
 }
 .top-section img {
 	width: 100%;
-    margin: 32px 0px 32px 0px; 
+    margin: 32px 0px 16px 0px; 
     border: solid 4px #d3d3d3;
 }
 .top-section h2 {
-	margin: 0px 0px 24px 0px;
+	margin-top: 0px;
 	font-family: "Caveat Brush"; 
 	letter-spacing: 2px;
-	font-size: 3rem;
+	font-size: 3.4rem;
 	color: black;
 	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
 }
 .top-section p {
-	margin-bottom: 45px;
+	font-size: 1.5rem;
+	line-height: 1;
+	letter-spacing: 3px;
+	font-family: "Just Another Hand";
+	margin: -30px 0px 25px 0px;
+}
+.top-section div {
+	font-family: "Just Another Hand";
+	letter-spacing: 3px;
+	font-size: 1.2rem;
 }
 .info-images {
-   width: 40%;
-   display: flex;
-   margin-left: 32px;
-   margin-top: 32px;
-   flex-direction: column;
+    width: 40%;
+    display: flex;
+    margin-left: 32px;
+    margin-top: 32px;
+    flex-direction: column;
+    border-left: solid 1px #d3d3d3;
 }  
+
+.info-images div {
+	display: flex;
+	border-bottom: solid 1px #d3d3d3;
+}
+
+.info-images div:first-child {
+	border-top: none;
+}
+
+.info-images div:nth-child(even) {
+	padding-top: 16px;
+}
+
+.info-images div:last-child {
+	padding-top: 16px;
+	background-color: #e1e1bd;
+}
+
 .info-images img {
 	width: 35%;
-	height: 29%;
+	height: 190px;
 	border: solid 4px #d3d3d3;
-	margin: 0px 0px 32px 16px;
+	margin: 0px 0px 16px 16px;
+}
+
+.info-images h3 {
+	width: 100%;
+	font-size: 2rem;
+	word-spacing: 3px;
+	letter-spacing: 3px;
+	margin: 30px 0px 10px 0px;
+	text-shadow: 5px 5px #ffff33;
+	font-family: "Caveat Brush", serif;
+}
+
+.info-images section{
+	width: 65%;
+	margin-left: 16px;
+	flex-direction: column;
+}
+
+.info-images a {
+	color: ;
+}
+
+.info-images a:active {
+    color: #ffff33;
 }
