--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,11 +37,11 @@ nav {
 	margin-right: 9px;
 }
 nav a {
-	top: 20px;
-    height: 18px;
+	top: 22px;
+    height: 20px;
     line-height: 1;
     position: relative;
-	font-family: "Caveat Brush", "Helvetica", serif;
+	font-family: "Gloria Hallelujah", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
@@ -74,25 +74,26 @@ nav a:hover {
 	border: solid 4px #d3d3d3;
 }
 .top-banner section  {
-    margin-top: 100px;
+    margin-top: 110px;
     margin-left: 0px;
 }
 .top-banner h1 {
-    font-family: "Gloria Hallelujah";
+    font-family: "Kranky";
     letter-spacing: 2px;
     line-height: 1.3;
     margin-bottom: 2px;
     text-shadow: 5px 5px #ffff33;
     color: black;
-    font-size: 50px;
+    font-size: 3.5rem;
+    font-weight: normal;
 }
 .top-banner h3 {
-	font-family: "Just Another Hand";
-	margin: 20px 0px 30px 30px;
+	font-family: ;
+	margin: 20px 0px 30px 25px;
 	letter-spacing: 4px;
 	word-spacing: 4px;
 	font-weight: normal;
-	font-size: 2.7rem;
+	font-size: 1.7rem;
 	width: 100%;
 }
 .button {
@@ -137,9 +138,9 @@ nav a:hover {
 }
 .top-section h2 {
 	margin-top: 0px;
-	font-family: "Caveat Brush"; 
+	font-family: "Kranky"; 
 	letter-spacing: 2px;
-	font-size: 3.4rem;
+	font-size: 3rem;
 	color: black;
 	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
@@ -148,11 +149,11 @@ nav a:hover {
 	font-size: 1.5rem;
 	line-height: 1;
 	letter-spacing: 3px;
-	font-family: "Just Another Hand";
+	font-family: ;
 	margin: -30px 0px 25px 0px;
 }
 .top-section div {
-	font-family: "Just Another Hand";
+	font-family: ;
 	letter-spacing: 3px;
 	font-size: 1.2rem;
 }
@@ -192,19 +193,19 @@ nav a:hover {
 
 .info-images h3 {
 	width: 100%;
-	font-size: 2rem;
-	word-spacing: 3px;
+	font-size: 1.5rem;
+	font-weight: normal;
 	letter-spacing: 3px;
 	margin: 30px 0px 10px 0px;
 	text-shadow: 5px 5px #ffff33;
-	font-family: "Caveat Brush", serif;
+	font-family: "Kranky", serif;
 }
 
 .info-images section{
 	width: 65%;
 	margin-left: 16px;
 	flex-direction: column;
-	font-family: "Just Another Hand", serif;
+	font-family: serif;
 	letter-spacing: 2px;
 	font-size: 1.5rem;
 }
