--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
     width: 100%;
 	height: 64px;
     font-size: 1.8rem;
-    border-bottom: 4px solid #d3d3d3;
+    border-bottom: 4px solid black;
     font-family: "Josefin Sans", serif;
     background-size: cover;
     background-position: center;
@@ -39,7 +39,7 @@ nav {
 nav a {
 	top: 22px;
     height: 20px;
-    line-height: 1;
+    line-height: 1.2;
     position: relative;
 	font-family: "Gloria Hallelujah", serif;
 	text-decoration: none;
@@ -50,7 +50,8 @@ nav a {
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
-    font-size: 1.1rem;
+    font-size: 1rem;
+    font-weight: bold;
     color: black;
     bottom: 7px;
 }
@@ -71,10 +72,10 @@ nav a:hover {
 	height: 50%;
 	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
-	border: solid 4px #d3d3d3;
+	border: solid 4px black;
 }
 .top-banner section  {
-    margin-top: 110px;
+    margin-top: 90px;
     margin-left: 0px;
 }
 .top-banner h1 {
@@ -84,22 +85,22 @@ nav a:hover {
     margin-bottom: 2px;
     text-shadow: 5px 5px #ffff33;
     color: black;
-    font-size: 3.5rem;
+    font-size: 3.8rem;
     font-weight: normal;
 }
 .top-banner h3 {
 	font-family: ;
-	margin: 20px 0px 30px 25px;
+	margin: 20px 0px 30px 50px;
 	letter-spacing: 4px;
 	word-spacing: 4px;
 	font-weight: normal;
-	font-size: 1.7rem;
+	font-size: 1.5rem;
 	width: 100%;
 }
 .button {
 	display: flex;
 	text-align: center;
-	padding: 8px 0px 8px 153px;
+	padding: 8px 0px 8px 187px;
 	font-family: "Caveat Brush", serif;
 	color: black;
 	border: solid 3px black;
@@ -146,16 +147,16 @@ nav a:hover {
 	font-weight: normal;
 }
 .top-section p {
-	font-size: 1.5rem;
+	font-size: 1rem;
 	line-height: 1;
-	letter-spacing: 3px;
+	letter-spacing: 1px;
 	font-family: ;
 	margin: -30px 0px 25px 0px;
 }
 .top-section div {
 	font-family: ;
-	letter-spacing: 3px;
-	font-size: 1.2rem;
+	letter-spacing: 1px;
+	font-size: 1rem;
 }
 .info-images {
     width: 40%;
@@ -193,9 +194,9 @@ nav a:hover {
 
 .info-images h3 {
 	width: 100%;
-	font-size: 1.5rem;
-	font-weight: normal;
-	letter-spacing: 3px;
+	font-size: 1.8rem;
+	font-weight: bold;
+	letter-spacing: 1px;
 	margin: 30px 0px 10px 0px;
 	text-shadow: 5px 5px #ffff33;
 	font-family: "Kranky", serif;
@@ -206,8 +207,8 @@ nav a:hover {
 	margin-left: 16px;
 	flex-direction: column;
 	font-family: serif;
-	letter-spacing: 2px;
-	font-size: 1.5rem;
+	letter-spacing: 1px;
+	font-size: 1rem;
 }
 
 .info-images a {
