--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,7 +13,7 @@ header {
     width: 100%;
 	height: 64px;
     font-size: 1.8rem;
-    border-bottom: 4px solid black;
+    font-weight: bold;
     font-family: "Josefin Sans", serif;
     background-size: cover;
     background-position: center;
@@ -46,12 +46,11 @@ nav a {
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
     border: solid 2px black;
-    border-radius: 8px;
+    border-radius: 40px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
     font-size: 1rem;
-    font-weight: bold;
     color: black;
     bottom: 7px;
 }
@@ -72,7 +71,8 @@ nav a:hover {
 	height: 50%;
 	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
-	border: solid 4px black;
+	border: solid 4px #d3d3d3;
+	border-radius: 150px;
 }
 .top-banner section  {
     margin-top: 90px;
@@ -212,7 +212,7 @@ nav a:hover {
 }
 
 .info-images a {
-	color: ;
+	color: black;
 }
 
 .info-images a:active {
