--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -89,10 +89,10 @@ nav a:hover {
     font-weight: normal;
 }
 .top-banner h3 {
-	font-family: ;
-	margin: 20px 0px 30px 50px;
-	letter-spacing: 4px;
-	word-spacing: 4px;
+	font-family: "EB Garamond";
+	margin: 20px 0px 30px 3px;
+	letter-spacing: 2px;
+    word-spacing: 8px;
 	font-weight: normal;
 	font-size: 1.5rem;
 	width: 100%;
@@ -147,16 +147,21 @@ nav a:hover {
 	font-weight: normal;
 }
 .top-section p {
-	font-size: 1rem;
+	width: 100%;
+	font-family: "EB Garamond";
+	font-size: 1.2rem;
 	line-height: 1;
 	letter-spacing: 1px;
+	word-spacing: 5px; 
 	font-family: ;
 	margin: -30px 0px 25px 0px;
+	font-weight: normal;
 }
 .top-section div {
-	font-family: ;
+	font-family: "EB Garamond";
 	letter-spacing: 1px;
-	font-size: 1rem;
+	font-size: 1.1rem;
+	font-weight: normal;
 }
 .info-images {
     width: 40%;
@@ -182,7 +187,7 @@ nav a:hover {
 
 .info-images div:last-child {
 	padding-top: 16px;
-	background-color: #e1e1bd;
+	background-color: #FAFAD2;
 }
 
 .info-images img {
@@ -195,26 +200,27 @@ nav a:hover {
 .info-images h3 {
 	width: 100%;
 	font-size: 1.8rem;
-	font-weight: bold;
 	letter-spacing: 1px;
+	font-weight: normal;
 	margin: 30px 0px 10px 0px;
 	text-shadow: 5px 5px #ffff33;
-	font-family: "Kranky", serif;
+	font-family: "Joefin Sans", serif;
 }
 
 .info-images section{
 	width: 65%;
 	margin-left: 16px;
 	flex-direction: column;
-	font-family: serif;
-	letter-spacing: 1px;
-	font-size: 1rem;
+	font-family: "EB Garamond", serif;
+	letter-spacing: 0.8px;
+	font-size: 1.1rem;
 }
 
 .info-images a {
 	color: black;
 }
 
-.info-images a:active {
-    color: #ffff33;
+.info-images a:hover {
+    color: #d3d3d3;
+    transition: color 150ms ease-in-out;
 }
