--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,7 +122,8 @@ nav a:hover {
 
 
 
-/* main-content section */
+/* main-content */
+ /* Keep-Practicing */
 .main-content {
 	display: flex;	
 }
@@ -141,7 +142,7 @@ nav a:hover {
 	margin-top: 0px;
 	font-family: "Kranky"; 
 	letter-spacing: 2px;
-	font-size: 3rem;
+	font-size: 2.9rem;
 	color: black;
 	text-shadow: 4px 4px #ffff33;
 	font-weight: normal;
@@ -150,10 +151,10 @@ nav a:hover {
 	width: 100%;
 	font-family: "EB Garamond";
 	font-size: 1.1rem;
-	line-height: 1.2;
+	line-height: 1.4;
 	letter-spacing: 1px;
 	word-spacing: 2px; 
-	margin: -30px 0px 25px 0px;
+	margin: -9px 0px 45px 0px;
 	font-weight: normal;
 }
 .top-section div {
@@ -161,6 +162,7 @@ nav a:hover {
 	letter-spacing: 0.8px;
 	font-size: 1.1rem;
 	font-weight: normal;
+	margin-bottom: 32px;
 	word-spacing: 1px;
 }
 .info-images {
@@ -169,7 +171,6 @@ nav a:hover {
     margin-left: 32px;
     margin-top: 32px;
     flex-direction: column;
-    border-left: solid 1px #d3d3d3;
 }  
 
 .info-images div {
@@ -202,7 +203,7 @@ nav a:hover {
 	font-size: 1.8rem;
 	letter-spacing: 1px;
 	font-weight: normal;
-	margin: 30px 0px 10px 0px;
+	margin: 30px 0px -10px 0px;
 	text-shadow: 5px 5px #ffff33;
 	font-family: "Joefin Sans", serif;
 }
@@ -223,4 +224,33 @@ nav a:hover {
 .info-images a:hover {
     color: #d3d3d3;
     transition: color 150ms ease-in-out;
+}
+
+
+/*main-section */
+ /* Start-Learning */
+.Careers {
+	width: 100%;
+    background-color: #d3d3d3;
+    margin-bottom: 32px;
+}
+
+.Careers h1 {
+	position: relative;
+	top: 32px;
+	left: 40%;
+    margin: 0px 0px 64px 0px;
+}
+.Boxes {
+    display: flex;
+	margin: 0px 72px;
+	width: 80%;
+}
+
+.Boxes div {
+    background-color: white;
+}
+
+.Boxes img {
+	width: 100%;
 }
