--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -72,7 +72,6 @@ nav a:hover {
 	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px #d3d3d3;
-	border-radius: 150px;
 }
 .top-banner section  {
     margin-top: 90px;
@@ -270,4 +269,5 @@ nav a:hover {
 
 .Boxes p {
 	margin: 8px 0px 24px 16px;
+	line-height: 1.4rem;
 }
