--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -38,19 +38,20 @@ nav {
 }
 nav a {
 	top: 22px;
-    height: 20px;
-    line-height: 1.2;
+    height: 24px;
+    line-height: 1.1;
     position: relative;
-	font-family: "Gloria Hallelujah", serif;
+	font-family: "Caveat Brush", serif;
 	text-decoration: none;
 	text-shadow: 2px 2px #ffffff;
     background-color: #fafad2;
     border: solid 2px black;
-    border-radius: 40px;
+    border-radius: 20px;
 	letter-spacing: 1px;
     margin: 0px 16px 0px 16px;
     padding: 1px 5px;
-    font-size: 1rem;
+    font-size: 1.3rem;
+    font-weight: normal;
     color: black;
     bottom: 7px;
 }
@@ -66,12 +67,14 @@ nav a:hover {
 .top-banner {
 	display: flex;
     background-color: #FAFAD2;
+    border-top: solid 1px #d3d3d3;
 }
 .top-banner img {
 	height: 50%;
 	width: 57.5%;
 	margin: 32px 24px 32px 24px; 
 	border: solid 4px #d3d3d3;
+	border-radius: 20px;
 }
 .top-banner section  {
     margin-top: 90px;
@@ -82,13 +85,13 @@ nav a:hover {
     letter-spacing: 2px;
     line-height: 1.3;
     margin-bottom: 2px;
-    text-shadow: 5px 5px #ffff33;
+    text-shadow: 3px 3px #ffff33;
     color: black;
     font-size: 3.8rem;
     font-weight: normal;
 }
 .top-banner h3 {
-	font-family: "EB Garamond";
+	font-family: "";
 	margin: 20px 0px 30px 3px;
 	letter-spacing: 2px;
     word-spacing: 8px;
@@ -104,7 +107,7 @@ nav a:hover {
 	color: black;
 	border: solid 3px black;
     letter-spacing: 2px;
-	border-radius: 14px;
+	border-radius: 20px;
     background-color: #ffffff;
     font-size: 1.5rem;
 }
@@ -125,6 +128,7 @@ nav a:hover {
  /* Keep-Practicing */
 .main-content {
 	display: flex;	
+	border-top: solid 1px #d3d3d3;
 }
 .main-content .top-section {
 	margin-left: 24px;
@@ -136,6 +140,7 @@ nav a:hover {
 	width: 100%;
     margin: 32px 0px 16px 0px; 
     border: solid 4px #d3d3d3;
+    border-radius: 20px;
 }
 .top-section h2 {
 	margin-top: 0px;
@@ -143,12 +148,12 @@ nav a:hover {
 	letter-spacing: 2px;
 	font-size: 2.9rem;
 	color: black;
-	text-shadow: 4px 4px #ffff33;
+	text-shadow: 3px 3px #ffff33;
 	font-weight: normal;
 }
 .top-section p {
 	width: 100%;
-	font-family: "EB Garamond";
+	font-family: "";
 	font-size: 1.1rem;
 	line-height: 1.4;
 	letter-spacing: 1px;
@@ -157,7 +162,7 @@ nav a:hover {
 	font-weight: normal;
 }
 .top-section div {
-	font-family: "EB Garamond";
+	font-family: "";
 	letter-spacing: 0.8px;
 	font-size: 1.1rem;
 	font-weight: normal;
@@ -175,6 +180,7 @@ nav a:hover {
 .info-images div {
 	display: flex;
 	border-bottom: solid 1px #d3d3d3;
+	border-left: solid 1px #d3d3d3;
 }
 
 .info-images div:first-child {
@@ -188,12 +194,14 @@ nav a:hover {
 .info-images div:last-child {
 	padding-top: 16px;
 	background-color: #FAFAD2;
+	border-bottom: none;
 }
 
 .info-images img {
 	width: 35%;
 	height: 190px;
 	border: solid 4px #d3d3d3;
+	border-radius: 20px;
 	margin: 0px 0px 16px 16px;
 }
 
@@ -202,16 +210,15 @@ nav a:hover {
 	font-size: 1.8rem;
 	letter-spacing: 1px;
 	font-weight: normal;
+	text-shadow: 2px 2px #ffff33;
 	margin: 30px 0px -10px 0px;
-	text-shadow: 5px 5px #ffff33;
-	font-family: "Joefin Sans", serif;
+	font-family: "Josefin Sans", serif;
 }
 
 .info-images section{
 	width: 65%;
 	margin-left: 16px;
 	flex-direction: column;
-	font-family: "EB Garamond", serif;
 	letter-spacing: 0.8px;
 	font-size: 1.1rem;
 }
@@ -232,19 +239,24 @@ nav a:hover {
 	width: 100%;
     background-color: #FAFAD2;
     margin-bottom: 32px;
+    border-top: solid 1px #d3d3d3;
 }
 
 .Careers h1 {
 	position: relative;
 	top: 32px;
+	font-family: "Kranky", serif;
+	font-weight: normal;
+	font-size: 2.9rem;
 	text-align: center;
+	text-shadow: 4px 4px #ffff33;
     margin: 0px 0px 64px 0px;
 }
 
 .Boxes {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
 	width: 100%;
 }
 
@@ -256,7 +268,7 @@ nav a:hover {
 }
 
 .Boxes img {
-	width: 100%;
+	width: 100%; 
 }
 
 .Boxes h3 {
