--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -291,19 +291,26 @@ nav a:hover {
 
  .Thesis {
  	width: 100%;
- 	margin: 32px 24px 32px 24px;
+ 	margin: 0px 24px 32px 24px;
  }
 
  .Thesis h2 {
     font-family: "Kranky";
     font-size: 2.9rem;
     font-weight: normal;
+    margin: 32px 0px 32px 0px;
+    text-align: center;
     text-shadow: 4px 4px #ffff33;
-
  }
 
  .Thesis video {
  	width: 60%;
- 	margin: 32px 24px 24px 0px;
+ 	margin: 0px 24px 24px 0px;
  	border: solid 4px #d3d3d3;
  }
+
+.Thesis h3 {
+    font-family: "EB Garamond", serif;
+    margin-bottom: 8px;
+
+}
