--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -370,10 +370,13 @@ nav a:hover {
 }
 
 footer  {
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 }
 
 footer span {
 	font-size: 1rem;
+	padding-right: 20px;
+
 }
