--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -327,6 +327,7 @@ nav a:hover {
 	font-family: "kreon", serif;
 }
 .Thesis-content video {
+	height: auto;
 	width: 100%;
 	border: solid 4px #d3d3d3;
 }
@@ -337,7 +338,7 @@ nav a:hover {
 }
 .Thesis-content .images div {
 	width: 100%;
-	height: 31%;
+	height: 30.5%;
 	display: flex;
 	background-color: #fafad2;
 	border: solid 1px #d3d3d3;
