--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -436,7 +436,11 @@ header nav a {
 	font-size: 0.9rem;
 	}
 
-
+@media only screen and (max-width: 760px) {
+	.top-banner h1 {
+		font-size: 2.8rem;
+	}
+}
 
 
 /* header mobile 660px mq */  
@@ -471,7 +475,7 @@ nav.mobile-nav-container {
 }
 
 .top-banner h1 {
-	font-size: 2.9rem;
+	font-size: 2.8rem;
 }
 
 .top-banner h3 {
